// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ovmf_proto;

option go_package = "github.com/google/gce-tcb-verifier/proto/ovmf";

// Reset block for SEV-ES.
message SevEsResetBlock {
  uint32 addr = 1;
  uint32 size = 2;  // uint16_t [(nanopb).int_size = IS_16];

  bytes guid = 3;  // 16 bytes
}
